@@ -42,7 +42,6 @@ public:
   void preSieve(uint8_t* sieve, uint64_t sieveSize, uint64_t segmentLow) const;
   uint64_t getMaxPrime() const { return maxPrime_; }
 private:
-  uint64_t buffersDist_ = 0;
   uint64_t maxPrime_ = 13;
   std::array<std::vector<uint8_t>, 8> buffers_;
   void initBuffers();
